--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ html {
 
 body {
 	margin: 0;
-	font-family: "Round", sans-serif;
+	font-family: sans-serif;
 	font-size: 16px;
 	font-size: 1.2rem;
 	line-height: 1.75;
